fix: dashboard layout bug

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -47,3 +47,15 @@
     }
 
 }
+
+.table-responsive .dropdown,
+.table-responsive .btn-group,
+.table-responsive .btn-group-vertical {
+    position: static;
+}
+
+.collapsing {
+    -webkit-transition: none;
+    transition: none;
+    display: none;
+}
